--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        java-version: [ 17, 18 ]
+        java-version: [ 17, 18, 19 ]
         os: [ ubuntu-latest ]
     steps:
       - uses: actions/checkout@v3
