ci: add build docker CI/CD (#356)
* ci: add build docker CI/CD

* ci: show ll -a

* ci: ll -> ls

* ci: remove 'COPY *.gradle  /usr/src/app'

* fix: fix the error 'When using COPY with more than one source file, the destination must be a directory and end with a /'

* ci: show image digest

* ci: typo fix

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: [master]
 
+env:
+  REGISTRY_NAME: github.com
+
 jobs:
   test:
     runs-on: ${{ matrix.os }}
@@ -64,6 +67,7 @@ jobs:
         run: ./gradlew test
   build:
     runs-on: ${{ matrix.os }}
+    needs: [ test ]
     strategy:
       matrix:
         java-version: [ 17, 18 ]
@@ -88,6 +92,7 @@ jobs:
         run: ./gradlew build -x test
   build-maven:
     runs-on: ${{ matrix.os }}
+    needs: [ build ]
     strategy:
       matrix:
         java-version: [ 17, 18 ]
@@ -108,3 +113,21 @@ jobs:
             ${{ runner.os }}-maven-
       - name: Build with Maven
         run: mvn package -Dmaven.test.skip=true
+  build-docker:
+    runs-on: ubuntu-latest
+    needs: [ build, build-maven ]
+    steps:
+      - uses: actions/checkout@master
+      # Container build
+      - name: Build docker with gradle
+        id: build-docker-g
+        run: |
+          docker build . -t ${{ env.REGISTRY_NAME }}/damingerdai/hoteler-g:${{ github.sha }} -f Dockerfile
+      - name: Image digest for gradle
+        run: echo ${{ steps.build-docker-g.outputs.digest }}
+      - name: Build docker with maven
+        id: build-docker-m
+        run: |
+          docker build . -t ${{ env.REGISTRY_NAME }}/damingerdai/hoteler-m:${{ github.sha }} -f maven.Dockerfile
+      - name: Image digest for maven
+        run: echo ${{ steps.build-docker-m.outputs.digest }}
