--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -3,6 +3,10 @@ name: Build and Publish
 on:
   push:
     branches: [ master ]
+    paths:
+      - 'src/**'
+      - 'pom.xml'
+      - 'build.gradle'
 
 jobs:
   build-and-push-docker-image:
