--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -39,10 +39,20 @@ java_binary(
 
 java_test(
     name = "tests",
-    srcs = glob(["src/test/java/org/daming/hoteler/*.java"]),
+    srcs = glob([
+        "src/test/java/org/daming/hoteler/*.java",
+        "src/test/java/org/daming/hoteler/config/*.java",
+
+    ]),
     test_class = "org.daming.hoteler.HotelerApplicationTests",
     deps = [
         ":java-maven-lib",
-        "@maven//:junit_junit",
+        "@maven//:org_springframework_boot_spring_boot_starter_test",
+        "@maven//:org_springframework_security_spring_security_test",
+
+        "@maven//:org_springframework_boot_spring_boot_test",
+        "@maven//:org_springframework_spring_test",
+        "@maven//:org_junit_jupiter_junit_jupiter",
+        "@maven//:org_junit_jupiter_junit_jupiter_api",
     ],
 )
