refactor: 不再直接使用secret.key，而是使用ISecretPropService调用

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -36,6 +36,7 @@ mybatis:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
 secret:
+  salt: dc513dcf1de6941978deb973fe98c1f6
   key: damingerdai
 
 logger:
