--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,15 @@
 buildscript {
 	repositories {
 		mavenLocal()
+		maven { url 'https://repo.spring.io/milestone' }
+		maven { url 'https://repo.spring.io/snapshot' }
 		mavenCentral()
-		maven{ url 'https://maven.aliyun.com/nexus/content/groups/public/'}
+		maven { url 'https://maven.aliyun.com/nexus/content/groups/public/' }
 	}
 }
 
 plugins {
-	id 'org.springframework.boot' version '2.7.6'
+	id 'org.springframework.boot' version '3.0.0'
 	id 'io.spring.dependency-management' version '1.1.0'
 	id 'org.flywaydb.flyway' version '9.8.1'
 	id 'java'
@@ -20,6 +22,8 @@ targetCompatibility = '17'
 
 repositories {
 	mavenLocal()
+  	maven { url 'https://repo.spring.io/milestone' }
+  	maven { url 'https://repo.spring.io/snapshot' }
 	mavenCentral()
 	maven { url 'https://maven.aliyun.com/nexus/content/groups/public/' }
 }
@@ -33,7 +37,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
-	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.2'
+	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.0'
 
 	implementation 'org.postgresql:postgresql:42.5.0'
 	implementation 'org.springdoc:springdoc-openapi-ui:1.6.12'
