--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,14 @@
+// 当spring boot 3正式发布之后可以删除
+pluginManagement {
+    repositories {
+        mavenLocal()
+        mavenCentral()
+        maven { url 'https://repo.spring.io/milestone' }
+        maven { url 'https://repo.spring.io/snapshot' }
+        maven { url 'https://plugins.gradle.org/m2/' }
+        maven { url 'https://maven.aliyun.com/nexus/content/groups/public/' }
+        gradlePluginPortal()
+    }
+}
+
 rootProject.name = 'hoteler'
