--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,11 +4,12 @@ server:
     enabled: true
     mime-types: application/json,application/xml,text/html,text/xml,text/plain,text/css,application/javascript
 spring:
-  redis:
-    host: 127.0.0.1
-    port: 6379
-    database: 0
-    password:
+  data:
+    redis:
+      host: 127.0.0.1
+      port: 6379
+      database: 0
+      password:
   datasource:
     url: jdbc:postgresql://127.0.0.1:5432/hoteler
     username: postgres
