--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -140,5 +140,12 @@ jobs:
         os: [ ubuntu-latest ]
     steps:
       - uses: actions/checkout@v3.1.0
+      - name: Mount bazel cache
+        uses: actions/cache@v3
+        with:
+          path: "/home/runner/.cache/bazel"
+          key: ${{ runner.os }}-bazel-${{ hashFiles('WORKSPACE') }}
+          restore-keys: |
+            ${{ runner.os }}-bazel-
       - name: Build with bazel
         run: bazel build //:hoteler
