feat: 为ping接口添加限流操作

--- a/pom.xml
+++ b/pom.xml
@@ -234,6 +234,7 @@
                             <include>**/*.yml</include>
                             <include>**/*.xml</include>
                             <include>db/**</include>
+                            <include>lua/**</include>
                             <include>static/**</include>
                         </includes>
                         <excludes>
