--- a/build.gradle
+++ b/build.gradle
@@ -88,7 +88,7 @@ if (project.hasProperty('standalone')) {
 		}
 	}
 	bootJar {
-		archiveName = "hoteler-standalone.jar"
+		archiveFileName = "hoteler-standalone.jar"
 		mainClass = 'org.daming.hoteler.HotelerApplication'
 	}
 }
