--- a/migration/WORKSPACE
+++ b/migration/WORKSPACE
@@ -22,14 +22,23 @@ http_archive(
 )
 
 load("@io_bazel_rules_go//go:deps.bzl", "go_register_toolchains", "go_rules_dependencies")
+# go_download_sdk(
+#     name = "go_sdk",
+#     version = "1.20",
+#     urls = [
+#         "https://dl.google.com/go/{}",
+#         "https://mirrors.aliyun.com/golang/{}"
+#     ]
+# )
+
 go_rules_dependencies()
+
+go_register_toolchains(version = "1.20")
 
 load("@bazel_gazelle//:deps.bzl", "gazelle_dependencies")
 load("//:deps.bzl", "go_dependencies")
 
 # gazelle:repository_macro deps.bzl%go_dependencies
 go_dependencies()
-
-go_register_toolchains(version = "1.20")
 
 gazelle_dependencies()
