--- a/deplyoments/pgbouncer/service.yaml
+++ b/deplyoments/pgbouncer/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: pgbouncer
-  namespace: default
+  namespace: hoteler-namespace
   labels:
     app: pgbouncer
 spec:
