chore: 默认数据库使用postgres

--- a/build.gradle
+++ b/build.gradle
@@ -60,7 +60,7 @@ dependencies {
 }
 
 flyway {
-	url = 'jdbc:postgresql://127.0.0.1:5432/hoteler'
+	url = 'jdbc:postgresql://127.0.0.1:5432/postgres'
 	user = 'postgres'
 	password = '123456'
 }
