--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
       database: 0
       password:
   datasource:
-    url: jdbc:postgresql://127.0.0.1:5432/hoteler
+    url: jdbc:postgresql://127.0.0.1:5432/postgres
     username: postgres
     password: 123456
     driver-class-name: org.postgresql.Driver
