--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,6 +20,9 @@ spring:
     baseline-on-migrate: true
   main:
     allow-bean-definition-overriding: true
+  graphql:
+    graphiql:
+      enabled: true
   devtools:
     restart:
       enabled: false
