--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -13,6 +13,7 @@ java_library(
         "@maven//:org_springframework_boot_spring_boot_starter_cache",
         "@maven//:org_springframework_boot_spring_boot_starter_actuator",
         "@maven//:org_springframework_boot_spring_boot_starter_data_redis",
+        "@maven//:org_springframework_boot_spring_boot_starter_graphql",
         "@maven//:org_mybatis_spring_boot_mybatis_spring_boot_starter",
 
         "@maven//:org_postgresql_postgresql",
