--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -14,6 +14,9 @@ spring:
     baseline-on-migrate: true
   main:
     allow-bean-definition-overriding: true
+  graphql:
+    graphiql:
+      enabled: true
 
 mybatis:
   configuration:
