--- a/src/main/resources/errors.yml
+++ b/src/main/resources/errors.yml
@@ -29,3 +29,7 @@ errors:
     message: SQL '%s' error.
   - code: 800001
     message: customer create error.
+  - code: 800002
+    message: customer update error.
+  - code: 800003
+    message: customer get error.
