--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -23,4 +23,12 @@ mybatis:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
 secret:
+  salt: dc513dcf1de6941978deb973fe98c1f6
+  personSalt: dc513dcf1de6941978deb973fe98c1f4
   key: damingerdai
+
+logger:
+  level: debug
+
+springdoc:
+  packagesToScan: org.daming.hoteler.api.web
