feat: add quartz job

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -14,6 +14,7 @@ java_library(
         "@maven//:org_springframework_boot_spring_boot_starter_actuator",
         "@maven//:org_springframework_boot_spring_boot_starter_data_redis",
         "@maven//:org_springframework_boot_spring_boot_starter_graphql",
+        "@maven//:org_springframework_boot_spring_boot_starter_quartz",
         "@maven//:org_mybatis_spring_boot_mybatis_spring_boot_starter",
 
         "@maven//:org_postgresql_postgresql",
