build: postgres升级到15.4-alpine3.18

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - db
 
   db:
-    image: postgres:15
+    image: postgres:15.4-alpine3.18
     container_name: db
     ports:
       - 5432:5432
