--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,22 @@ services:
       POSTGRES_DB: postgres
     networks:
       - hoteler-network
+  pgbouncer:
+    image: edoburu/pgbouncer:1.20.1-p0
+    container_name: 'pgbouncer'
+    environment:
+      - DATABASE_URL=postgres://postgres:123456@db:5432/postgres
+      - POOL_MODE=transaction
+      - MAX_DB_CONNECTIONS=100
+      - DEFAULT_POOL_SIZE=40
+      - AUTH_TYPE=scram-sha-256
+    depends_on:
+      - db
+    ports:
+      - 6543:5432
+    networks:
+      - hoteler-network
+    restart: on-failure
 
   redis:
     image: redis:7.2.1-alpine
