feat: 使用k8s的HorizontalPodAutoscaler进行水平的资源缩放

--- a/deplyoments/app.yaml
+++ b/deplyoments/app.yaml
@@ -66,6 +66,13 @@ spec:
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 80
+          resources:
+            requests:
+              cpu: 200m
+              memory: 500Mi
+            limits:
+              cpu: 400m
+              memory: 1G
 ---
 apiVersion: v1
 kind: Service
