--- a/src/main/resources/BUILD.bazel
+++ b/src/main/resources/BUILD.bazel
@@ -1,5 +1,5 @@
 filegroup(
     name = "resource",
-    srcs = glob(["*.yml", "*.xml", "banner.txt"]),
+    srcs = glob(["*.yml", "*.xml", "banner.txt", "db/**", "graphql/**", "lua/**"]),
     visibility = ["//visibility:public"]
 )
