--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <kotlin.version>1.3.70</kotlin.version>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
+        <changelog.version>1.100.2-SNAPSHOT</changelog.version>
     </properties>
 
     <dependencies>
@@ -190,6 +191,34 @@
                     <password>123456</password>
                 </configuration>
             </plugin>
+
+            <!-- git changelog maven plugin -->
+            <plugin>
+                <groupId>se.bjurr.gitchangelog</groupId>
+                <artifactId>git-changelog-maven-plugin</artifactId>
+                <version>${changelog.version}</version>
+                <executions>
+                    <execution>
+                        <id>GenerateGitChangelogTemplateFromFileAndToken</id>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>git-changelog</goal>
+                        </goals>
+                        <configuration>
+                            <useIntegrations>true</useIntegrations>
+                            <gitHubEnabled>trye</gitHubEnabled>
+                            <gitHubApi>https://api.github.com/repos/tomasbjerre/git-changelog-maven-plugin</gitHubApi>
+                            <gitHubToken>${GITHUB_OAUTH2TOKEN}</gitHubToken><!-- Optional // -->
+                            <gitHubIssuePattern>#([0-9]*)</gitHubIssuePattern>
+                            <templateFile>changelog.mustache</templateFile>
+                            <readableTagName>-([^-]+?)$</readableTagName>
+                            <file>CHANGELOG.md</file>
+                            <ignoreCommitsIfMessageMatches>^\[maven-release-plugin\].*</ignoreCommitsIfMessageMatches>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            
         </plugins>
     </build>
     <repositories>
