--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
         <kotlin.version>1.3.70</kotlin.version>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
-        <changelog.version>1.100.2-SNAPSHOT</changelog.version>
+        <changelog.version>1.100.6</changelog.version>
         <jsonwebtoken.version>0.12.2</jsonwebtoken.version>
     </properties>
 
@@ -208,8 +208,8 @@
                         <configuration>
                             <useIntegrations>true</useIntegrations>
                             <gitHubEnabled>trye</gitHubEnabled>
-                            <gitHubApi>https://api.github.com/repos/tomasbjerre/git-changelog-maven-plugin</gitHubApi>
-                            <gitHubToken>${GITHUB_OAUTH2TOKEN}</gitHubToken><!-- Optional // -->
+                            <gitHubApi>https://api.github.com/repos/damingerdai/hoteler</gitHubApi>
+<!--                            <gitHubToken>${GITHUB_OAUTH2TOKEN}</gitHubToken>&lt;!&ndash; Optional // &ndash;&gt;-->
                             <gitHubIssuePattern>#([0-9]*)</gitHubIssuePattern>
                             <templateFile>changelog.mustache</templateFile>
                             <readableTagName>-([^-]+?)$</readableTagName>
