ci: 在ci环境下动态开启数据库单元测试

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,6 +75,8 @@ jobs:
       - name: Unit Test with Gradle
         # run: ./gradlew flywayMigrate && ./gradlew build
         run: ./gradlew test
+        env:
+          IS-CI: true
   build:
     runs-on: ${{ matrix.os }}
     needs: [ test ]
