--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
           --health-retries 5
         ports:
           # Maps tcp port 5432 on service container to the host
-          - 5432/tcp
+          - 5432:5432
       redis:
         image: redis:7.2.2-alpine
         options: >-
@@ -58,7 +58,8 @@ jobs:
         run: cd migration && go build -o migrate migration.go && ./migrate up
         env:
           POSTGRES_HOST: localhost
-          POSTGRES_PORT: ${{ job.services.postgres.ports[5432] }} # get randomly assigned published port
+          # POSTGRES_PORT: ${{ job.services.postgres.ports[5432] }} # get randomly assigned published port
+          POSTGRES_PORT: 5432
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: 123456
           POSTGRES_DB: postgres
@@ -75,6 +76,13 @@ jobs:
       - name: Unit Test with Gradle
         # run: ./gradlew flywayMigrate && ./gradlew build
         run: ./gradlew test
+        env:
+          CI: true
+      - name: Unit Test with Maven
+        # run: ./gradlew flywayMigrate && ./gradlew build
+        run: ./mvnw test && ./mvnw surefire-report:report-only
+        env:
+          CI: true
   build:
     runs-on: ${{ matrix.os }}
     needs: [ test ]
