--- a/deplyoments/k3s/config.yaml
+++ b/deplyoments/k3s/config.yaml
@@ -11,6 +11,9 @@ data:
         enabled: true
         mime-types: application/json,application/xml,text/html,text/xml,text/plain,text/css,application/javascript
     spring:
+      threads:
+        virtual:
+          enabled: true
       data:
         redis:
           host: redis
