--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,9 @@ server:
     enabled: true
     mime-types: application/json,application/xml,text/html,text/xml,text/plain,text/css,application/javascript
 spring:
+  threads:
+    virtual:
+      enabled: true
   data:
     redis:
       host: 127.0.0.1
