--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,7 @@ dependencies {
 	implementation 'org.yaml:snakeyaml:2.2'
 	implementation 'org.flywaydb:flyway-core:10.2.0'
 	implementation 'com.cronutils:cron-utils:9.2.1'
+	implementation 'org.bouncycastle:bcpkix-jdk18on:1.77'
 
 	//developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
