--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -26,6 +26,7 @@ java_library(
         "@maven//:org_apache_commons_commons_lang3",
         "@maven//:jakarta_xml_bind_jakarta_xml_bind_api",
         "@maven//:cn_hutool_hutool_crypto",
+        "@maven//:org_bouncycastle_crypto",
 
         "@maven//:org_springframework_boot_spring_boot",
         "@maven//:org_springframework_boot_spring_boot_autoconfigure",
