--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,8 +14,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        java-version: [ 21 ]
-        go-version: ["1.21.5"]
+        java-version: [21]
+        go-version: ["1.21.6"]
         os: [ubuntu-latest]
     # https://github.com/actions/example-services/blob/master/.github/workflows/postgres-service.yml
     services:
@@ -50,7 +50,7 @@ jobs:
       - name: Set up JDK
         uses: actions/setup-java@v4
         with:
-          distribution: 'zulu'
+          distribution: "zulu"
           java-version: ${{ matrix.java-version }}
       - name: Setup go
         uses: actions/setup-go@v5
@@ -87,17 +87,17 @@ jobs:
           CI: true
   build:
     runs-on: ${{ matrix.os }}
-    needs: [ test ]
+    needs: [test]
     strategy:
       matrix:
-        java-version: [ 21 ]
-        os: [ ubuntu-latest ]
+        java-version: [21]
+        os: [ubuntu-latest]
     steps:
       - uses: actions/checkout@v4.1.1
       - name: Set up JDK
         uses: actions/setup-java@v4
         with:
-          distribution: 'zulu'
+          distribution: "zulu"
           java-version: ${{ matrix.java-version }}
       - name: Cache Gradle packages
         uses: actions/cache@v3
@@ -112,17 +112,17 @@ jobs:
         run: ./gradlew build -x test
   build-maven:
     runs-on: ${{ matrix.os }}
-    needs: [ build ]
+    needs: [build]
     strategy:
       matrix:
-        java-version: [ 21 ]
-        os: [ ubuntu-latest ]
+        java-version: [21]
+        os: [ubuntu-latest]
     steps:
       - uses: actions/checkout@v4.1.1
       - name: Set up JDK
         uses: actions/setup-java@v4
         with:
-          distribution: 'zulu'
+          distribution: "zulu"
           java-version: ${{ matrix.java-version }}
       - name: Cache Maven packages
         uses: actions/cache@v3
@@ -132,10 +132,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven-
       - name: Build with Maven
-        run:  ./mvnw package -Dmaven.test.skip=true
+        run: ./mvnw package -Dmaven.test.skip=true
   build-docker:
     runs-on: ubuntu-latest
-    needs: [ build, build-maven ]
+    needs: [build, build-maven]
     steps:
       - uses: actions/checkout@master
       # Container build
@@ -153,11 +153,11 @@ jobs:
         run: echo ${{ steps.build-docker-m.outputs.digest }}
   build-bazel:
     runs-on: ${{ matrix.os }}
-    needs: [ build ]
+    needs: [build]
     strategy:
       matrix:
-        java-version: [ 21 ]
-        os: [ ubuntu-latest ]
+        java-version: [21]
+        os: [ubuntu-latest]
     steps:
       - uses: actions/checkout@v4.1.1
       - name: Mount bazel cache
@@ -169,3 +169,4 @@ jobs:
             ${{ runner.os }}-bazel-
       - name: Build with bazel
         run: bazel build //:hoteler
+
