--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ group = 'org.daming'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '21'
 targetCompatibility = '21'
+def jsonwebtokenVersion = "0.12.5"
 
 repositories {
 	mavenLocal()
@@ -45,9 +46,9 @@ dependencies {
 
 	implementation 'org.postgresql:postgresql:42.7.1'
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
-	implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
-	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
-	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'
+	implementation("io.jsonwebtoken:jjwt-api:${jsonwebtokenVersion}")
+	runtimeOnly("io.jsonwebtoken:jjwt-impl:${jsonwebtokenVersion}")
+	runtimeOnly("io.jsonwebtoken:jjwt-jackson:${jsonwebtokenVersion}")
 	implementation 'commons-codec:commons-codec:1.16.0'
 	implementation 'org.apache.commons:commons-lang3:3.14.0'
 	implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.1'
