--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -34,6 +34,7 @@ java_library(
         "@maven//:org_springframework_spring_beans",
         "@maven//:org_springframework_spring_web",
         "@maven//:org_springframework_spring_context",
+        "@maven//:org_springframework_spring_tx",
     ],
     resources = [
         "//src/main/resources:resource",
