--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -90,7 +90,7 @@ jobs:
     needs: [test]
     strategy:
       matrix:
-        java-version: [21]
+        java-version: [21, 22]
         os: [ubuntu-latest]
     steps:
       - uses: actions/checkout@v4.1.1
