--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,7 @@ dependencies {
 	implementation 'org.flywaydb:flyway-core:10.8.1'
 	implementation 'com.cronutils:cron-utils:9.2.1'
 	implementation 'org.bouncycastle:bcpkix-jdk18on:1.77'
+	implementation 'com.lmax:disruptor:4.0.0'
 
 	//developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
