--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 	implementation 'org.springframework.boot:spring-boot-starter-graphql'
 	implementation 'org.springframework.boot:spring-boot-starter-quartz'
-
+	implementation 'com.graphql-java:graphql-java-extended-scalars:22.0'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
 
 	implementation 'org.postgresql:postgresql:42.7.3'
