feat: 支持docker-compose直接启动部署

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     restart: always
     ports:
       - 8443:8443
+    volumes:
+      - ./config/application.yml:/app/config/application.yml
     networks:
       - hoteler-network
     env_file: .env
