refactor: 将docker-compose中hoteler所需要配置文件直接放在项目根目录

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     ports:
       - 8443:8443
     volumes:
-      - ./config/application.yml:/app/config/application.yml
+      - ./application-docker.yml:/app/config/application-docker.yml
     networks:
       - hoteler-network
     env_file: .env
